[package]
name = "async_notification"
version = "0.1.0"
edition = "2024"

[dependencies]
signal-hook-tokio = { version = "0.3", features = [
    "futures-v0_3",
], optional = true }
# signal-hook = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
lazyinit = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
libc = "0.2"

[features]
signal = ["signal-hook-tokio", "futures", "libc", "lazyinit"]
default = ["signal", "log"]
